# ai_by_doing

./: README.md  main.py  pyproject.toml
02/: README.md  beijing.py  boston.py  common.py  liner_by_algebraic.py  liner_by_matrix.py  liner_by_scikit.py
04/: README.md  btc.py  by_scikit.py  main.py  n_fit.py  vaccine.py
06/: 1_hilbert.py  2_eidge.py  3_lasso.py  README.md
09/: README.md  main.py
